# datascience-done-right

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
notebooks/classification/: linear_regression_classifier.ipynb  no_skill.ipynb
notebooks/regression/: extrapolation.ipynb
src/classification/: no_skill.ipynb
src/regression/: extrapolation.ipynb
utils/: charts.py  dataframes.py
